--- a/ofir_designs/super_crazy.ipynb
+++ b/ofir_designs/super_crazy.ipynb
@@ -75,7 +75,7 @@
     "They had the fake orgasms and shit<br>\n",
     "We can tell n—as today “hey, I wanna cum, mothafucka<br>\n",
     "\n",
-    "<span>Kanye West, Gazzy Garcia, Omar Pineiro, Adele Givens</span>\n",
+    "<span>K. West, et al.</span>\n",
     "</blockquote>"
    ]
   }
